Fix piece disalignment

--- a/public/styles/board.css
+++ b/public/styles/board.css
@@ -122,11 +122,11 @@
 }
 
 .piece {
-    width: 40px;
-    height: 40px;
-    margin: 0;             
-    top: 10px;      
-    left: 10px;  
+  position: relative;
+    width: 50px;
+    height: 50px;
+    top: -5px;      
+    left: -10px;  
 }
   .button {
     position: absolute;
